blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-page
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ab-test
      version: blue
  template:
    metadata:
      labels:
        app: ab-test
        version: blue
    spec:
      containers:
      - name: blue-page
        image: dwa010301/blue-page:v1
        ports:
        - containerPort: 80
