green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-page
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ab-test
      version: green
  template:
    metadata:
      labels:
        app: ab-test
        version: green
    spec:
      containers:
      - name: green-page
        image: dwa010301/green-page:v1
        ports:
        - containerPort: 80
