ab-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ab-test
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: ab-test
