blue-app.yaml
# blue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: dwa010301/blue-page:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: 80
