green-app.yaml
# green-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: dwa010301/green-page:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: green
  ports:
  - port: 80
    targetPort: 80
