ab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ab-test
spec:
  rules:
  - host: ab-test.info  # 로컬 테스트용 도메인
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ab-test
            port:
              number: 80
